@@ -35,8 +35,8 @@ int main(
   char job_id[PBS_MAXCLTJOBID];       /* from the command line */
 
   char job_id_out[PBS_MAXCLTJOBID];
-  char server_out[MAXSERVERNAME];
-  char rmt_server[MAXSERVERNAME];
+  char server_out[MAXSERVERNAME] = "";
+  char rmt_server[MAXSERVERNAME] = "";
 
 #define MAX_HOLD_TYPE_LEN 32
   char hold_type[MAX_HOLD_TYPE_LEN+1];
@@ -142,7 +142,11 @@ cnt:
       {
       any_failed = -1 * connect;
 
-      fprintf(stderr, "qhold: cannot connect to server %s (errno=%d) %s\n",
+      if (server_out[0] != 0)
+        fprintf(stderr, "qhold: cannot connect to server %s (errno=%d) %s\n",
+              server_out, any_failed, pbs_strerror(any_failed));
+      else
+        fprintf(stderr, "qhold: cannot connect to server %s (errno=%d) %s\n",
               pbs_server, any_failed, pbs_strerror(any_failed));
       
       continue;
