@@ -521,8 +521,13 @@ int main(
     {
     any_failed = -1 * connect;
 
-    fprintf(stderr, "qselect: cannot connect to server %s (errno=%d) %s\n",
+    if (server_out[0] != 0)
+      fprintf(stderr, "qselect: cannot connect to server %s (errno=%d) %s\n",
+            server_out, any_failed, pbs_strerror(any_failed));
+    else
+      fprintf(stderr, "qselect: cannot connect to server %s (errno=%d) %s\n",
             pbs_server, any_failed, pbs_strerror(any_failed));
+
     exit(any_failed);
     }
 
